deploy/payments/build.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mayabank-mq-build
  labels:
    app.kubernetes.io/part-of: mayabank-mq
