deploy/payments/mq-connected.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mayabank-mq-local
  labels:
    app.kubernetes.io/part-of: mayabank-mq
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mq-deny-network
  namespace: mayabank-mq-local
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress: []
  egress: []
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq
  namespace: mayabank-mq-local
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mayabank-mq
  template:
    metadata:
      labels:
        app: mayabank-mq
    spec:
      serviceAccountName: mq
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 120
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mq
          image: icr.io/ibm-messaging/mq@sha256:28cd7e9dc413eced83b21e02cd3683966f19ef22867bbc7ca8c1ed19d062f986
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 2Gi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          startupProbe:
            exec:
              command: [chkmqready]
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            exec:
              command: [chkmqready]
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: credentials
              mountPath: /run/secrets/mqAppPassword
              subPath: mqAppPassword
              readOnly: true
            - name: data
              mountPath: /mnt/mqm
            - name: config
              mountPath: /etc/mqm/20-mayabank.mqsc
              subPath: 20-mayabank.mqsc
              readOnly: true
            - name: server-tls
              mountPath: /etc/mqm/pki/keys/mayabank-server
              readOnly: true
            - name: client-ca
              mountPath: /etc/mqm/pki/trust/0
              readOnly: true
      volumes:
        - name: credentials
          secret:
            secretName: mq-app-credentials
        - name: data
          persistentVolumeClaim:
            claimName: mq-data
        - name: config
          configMap:
            name: mq-config
        - name: server-tls
          secret:
            secretName: mq-mtls-server
        - name: client-ca
          secret:
            secretName: mq-mtls-ca
            items:
              - key: ca.crt
                path: tls.crt
