deploy/payments/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: mq
  namespace: mayabank-mq-local
  labels:
    app: mayabank-mq
spec:
  selector:
    app: mayabank-mq
  ports:
    - name: mq
      port: 1414
      targetPort: 1414
    - name: metrics
      port: 9157
      targetPort: 9157
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-clients-to-mq
  namespace: mayabank-mq-local
spec:
  podSelector:
    matchLabels:
      app: mayabank-mq
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              mayabank-role: mq-client
      ports:
        - protocol: TCP
          port: 1414
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-mq-metrics
  namespace: mayabank-mq-local
spec:
  podSelector:
    matchLabels:
      app: mayabank-mq
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 9157
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payments-mq-and-dns
  namespace: mayabank-mq-local
spec:
  podSelector:
    matchLabels:
      mayabank-role: mq-client
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mayabank-mq
      ports:
        - protocol: TCP
          port: 1414
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
        # Port cible 5353 confirmé dans l'EndpointSlice DNS de CRC.
        - protocol: UDP
          port: 5353
        - protocol: TCP
          port: 5353
